--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  font-family: VT323, monospace;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+html,
+body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+body {
+  background-image: url('./gif-1.gif');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  display: grid;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.respostas {
+  background: gray;
+}
+
+#rightAnswer:hover {
+  background-color: rgba(145, 145, 145, 0.823);
+  color: white;
+}
+#wrongAnswer:hover {
+  background-color: rgba(145, 145, 145, 0.823);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.rightAnswer {
+  background-color: rgb(6, 240, 15);
+  border: 3px solid rgb(6, 240, 15);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.rightAnswer {
+  animation: blinker 1.5s linear infinite;
+  box-shadow: 2px 2px 5px 10px yellow;
+}
+
+@keyframes blinker {
+  1% {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.wrongAnswer {
+  background-color: red;
+  border: 3px solid red;
 }
